# n8n_api_test

./: .dockerignore  .gitignore  Dockerfile  README.md  n8n.postman_collection.json  pyproject.toml
deployment/: docker-compose.yml
src/issue_api/: main.py
src/issue_api/models/: issue.py
src/issue_api/orm/: issues.py
src/issue_api/utils/: openai.py  sentiment.py
tests/: test_issues.py
