[project]
name = "issue-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolai Minaev",email = "minaev.36.ru@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "issue_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
